// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardChart Component should handle API response states: error 1`] = `
<Card
  className="curiosity-card curiosity-graph-card curiosity-usage-graph"
  isPlain={true}
>
  <CardHeader
    className="curiosity-card__header"
  >
    <CardTitle
      className="curiosity-card__title"
    >
      <Title
        headingLevel="h2"
        size="lg"
      >
        t(curiosity-graph.cardHeading, {})
        <GraphCardChartTitleTooltip />
      </Title>
    </CardTitle>
  </CardHeader>
  <MinHeight>
    <CardBody
      className="curiosity-card__body"
    >
      <ErrorMessage
        title="t(curiosity-graph.error_title)"
      />
    </CardBody>
  </MinHeight>
</Card>
`;

exports[`GraphCardChart Component should handle API response states: fulfilled 1`] = `
<Card
  className="curiosity-card curiosity-graph-card curiosity-usage-graph"
  isPlain={true}
>
  <CardHeader
    className="curiosity-card__header"
  >
    <CardTitle
      className="curiosity-card__title"
    >
      <Title
        headingLevel="h2"
        size="lg"
      >
        t(curiosity-graph.cardHeading, {})
        <GraphCardChartTitleTooltip />
      </Title>
    </CardTitle>
  </CardHeader>
  <MinHeight>
    <CardBody
      className="curiosity-card__body"
    >
      <Chart
        chartLegend={[Function]}
        chartTooltip={[Function]}
        dataSets={[]}
        xAxisLabelIncrement={1}
        xAxisTickFormat={[Function]}
        yAxisTickFormat={[Function]}
      />
    </CardBody>
  </MinHeight>
</Card>
`;

exports[`GraphCardChart Component should handle API response states: pending 1`] = `
<Card
  className="curiosity-card curiosity-graph-card curiosity-usage-graph"
  isPlain={true}
>
  <CardHeader
    className="curiosity-card__header"
  >
    <CardTitle
      className="curiosity-card__title"
    >
      <Title
        headingLevel="h2"
        size="lg"
      >
        t(curiosity-graph.cardHeading, {})
        <GraphCardChartTitleTooltip />
      </Title>
    </CardTitle>
  </CardHeader>
  <MinHeight>
    <CardBody
      className="curiosity-card__body"
    >
      <Loader
        variant="graph"
      />
    </CardBody>
  </MinHeight>
</Card>
`;

exports[`GraphCardChart Component should render a basic component: basic 1`] = `
<Card
  className="curiosity-card curiosity-graph-card curiosity-usage-graph"
  isPlain={true}
>
  <CardHeader
    className="curiosity-card__header"
  >
    <CardTitle
      className="curiosity-card__title"
    >
      <Title
        headingLevel="h2"
        size="lg"
      >
        t(curiosity-graph.cardHeading, {})
        <GraphCardChartTitleTooltip />
      </Title>
    </CardTitle>
  </CardHeader>
  <MinHeight>
    <CardBody
      className="curiosity-card__body"
    >
      <Chart
        chartLegend={[Function]}
        chartTooltip={[Function]}
        dataSets={[]}
        xAxisLabelIncrement={1}
        xAxisTickFormat={[Function]}
        yAxisTickFormat={[Function]}
      />
    </CardBody>
  </MinHeight>
</Card>
`;
